<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="110dp"
                android:layout_height="114dp"
                android:contentDescription="@string/imagen"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="61dp" />

            <TextView
                android:id="@+id/respuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/numero_uno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/boton_hint"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/numero_dos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/boton_hint"
                android:inputType="number"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/suma"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="sumar"
                        android:text="@string/boton_sumar" />

                    <Button
                        android:id="@+id/resta"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="restar"
                        android:text="@string/boton_restar" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/division"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="dividir"
                        android:text="@string/boton_dividir" />

                    <Button
                        android:id="@+id/multiplicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="multiplicar"
                        android:text="@string/boton_multiplicar" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF0000"
                android:onClick=" "
                android:text="@string/youtube" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>